log/build_2021-10-22_04-05-32/publisher3431/stderr.log
  File "/home/rsa2021/py_pub_sub/install/publisher3431/lib/python3.8/site-packages/publisher3431/publisher_ass2.py", line 22
    global scanner = LaserScan()
                   ^
SyntaxError: invalid syntax

